# scdata

./: .cargoignore  Cargo.toml  LICENSE_MIT  README.md
src/: ambient_rna_detect.rs  feature_index.rs  indexed_genes.rs  lib.rs  scdata.rs  singlecelldata.rs
src/cell_data/: cell.rs  cell_data.rs  cell_value.rs  gene_umi_hash.rs  mod.rs
src/sparse_matrix/: io.rs  matrix_value.rs  mod.rs  scdata.rs
tests/: scdata.rs  test-gzipped-files.rs  test-scdata.rs
